更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,24 @@
+## 2024.3.3
+
+1. 卖大牌小样
+
+大牌奢侈品确实很贵，很多人未必能消费得起，而小样价格就低很多，很多人为了体验一下就会购买
+
+之前在杭州也看到过类似的店铺，里面有一块专门卖口红、香水的小样，看的人挺多
+
+小红书上卖则是贴合了用户，需求量足够，只要有正品渠道，销售额应该不低
+
+最值得注意的是发帖者是从公众号底部广告栏挖掘到的这个模式，虽然我关闭了微信的个性化推送，但是收到的广告基本还是和游戏相关的
+
+<img src="/imgs/weather-vane/2024-3/2024-3-3-1.jpg" width="500"   />
+
+2. 在风向标中没看出什么，但在评论区看到大佬解释的引流和转化的操作，真心觉得厉害
+
+QQ 群可能被大多数人都忽略了，如果自己能迁移到别的项目中应该也能很好的引流
+
+<img src="/imgs/weather-vane/2024-3/2024-3-3-2.jpg" width="500"   />
+<img src="/imgs/weather-vane/2024-3/2024-3-3-3.png" width="500"   />
+
 ## 2024.3.2
 
 1. 无人打印机的方向有点意思，有一定需求，确实现在找打印店麻烦，价格也不便宜
