更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,22 @@
+## 2024.3.4
+
+1. 第一次看到法务中介这个概念
+
+信息差真的是赚钱
+
+当然这个案例还是要厚脸皮
+
+太多人拉不下脸去做（我也一样）
+
+<img src="/imgs/weather-vane/2024-3/2024-3-4-1.jpg" width="500"   />
+
+2. 小红书是个情绪价值足够满的平台
+
+选品很重要，好的选品真的能赚得盆满钵满
+
+<img src="/imgs/weather-vane/2024-3/2024-3-4-2.jpg" width="500"   />
+<img src="/imgs/weather-vane/2024-3/2024-3-4-3.jpg" width="500"   />
+
 ## 2024.3.3
 
 1. 卖大牌小样
