更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,19 @@
+## 2024.3.5
+
+1. 旅游+卖国外特产，属于是一鱼多吃，其实产品可能都是国内货源，但是结合视频就有更多的购买欲，同时旅游的分享也能带旅游团，结合的很好
+
+<img src="/imgs/weather-vane/2024-3/2024-3-5-1.jpg" width="500"   />
+
+2. 根据周边的环境来推出合适的方式，不得不说操作眼前一亮
+
+上班族去菜鸟驿站拿快递可以说是家常便饭了，外加单身公寓，这时候针对这个群体推出合适的产品+引流方式，简直完美契合
+
+<img src="/imgs/weather-vane/2024-3/2024-3-5-2.jpg" width="500"   />
+
+3. 思路巧妙，不知道怎么形容
+
+<img src="/imgs/weather-vane/2024-3/2024-3-5-3.jpg" width="500"   />
+
 ## 2024.3.4
 
 1. 第一次看到法务中介这个概念
