更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,21 @@
+## 2024.3.7
+
+1. 山姆代购，卓越会员有积分返利，属于一个信息差；
+
+不是所有人都会办会员卡，毕竟年费有点高，所以有代购需求；
+
+矩阵化放大收益，就是下单不知道能不能自动化，不然比较麻烦
+
+<img src="/imgs/weather-vane/2024-3/2024-3-7-1.jpg" width="500"   />
+
+2. 这个想法太秀了，利他利己
+
+<img src="/imgs/weather-vane/2024-3/2024-3-7-2.jpg" width="500"   />
+
+3. 一个做社群的工具，看着和星球有点像，不知道后续会不会做大，做社群的可以顺便发一下，也许会有付费的
+
+<img src="/imgs/weather-vane/2024-3/2024-3-7-3.jpg" width="500"   />
+
 ## 2024.3.5
 
 1. 旅游+卖国外特产，属于是一鱼多吃，其实产品可能都是国内货源，但是结合视频就有更多的购买欲，同时旅游的分享也能带旅游团，结合的很好
