更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,23 @@
+## 2024.3.10
+
+1. 之前也刷到过，觉得还挺好玩的，不过知道自己不会去练，也就没买
+
+算是那种小而美的东西，很容易让人有想买的冲动
+
+不过没想过在其他平台比价试试，以后应该刻意去比一下
+
+<img src="/imgs/weather-vane/2024-3/2024-3-10-1.jpg" width="500"   />
+
+2. 暴力测爆款，方式很妙
+
+<img src="/imgs/weather-vane/2024-3/2024-3-10-2.jpg" width="500"   />
+
+3. 数字人在直播中可能会替代一部分真人
+
+不过真人也会有一定空间，毕竟很多人是不喜欢看数字人的，就像线上购物不能完全替代线下购物一样
+
+<img src="/imgs/weather-vane/2024-3/2024-3-10-3.jpg" width="500"   />
+
 ## 2024.3.7
 
 1. 山姆代购，卓越会员有积分返利，属于一个信息差；
