更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,13 @@
+## 2024.3.11
+
+1. 没有着急卖货，而是先立住人设等待水果上市
+
+不论是不是真实的果农，比起有流量就收割的做法，更容易让人信任
+
+同时里面提到的盗坤的文章也很有价值[一个产品，年入百万](https://mp.weixin.qq.com/s/RYCY0OhGumN3BLENsbsk6g)
+
+<img src="/imgs/weather-vane/2024-3/2024-3-11-1.jpg" width="500"   />
+
 ## 2024.3.10
 
 1. 之前也刷到过，觉得还挺好玩的，不过知道自己不会去练，也就没买
