更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,17 @@
+## 2024.3.14
+
+1. 这个引流方式很暴力，缺点是引流来的没那么垂直，里面肯定有不少来爆粉的
+
+   微信聊天记录、朋友圈等图可以通过工具制作，甚至小程序就有，算是擦边，官方肯定是不允许的，但是需求在，开发难度应该不大，就是不知道有没有风险
+
+<img src="/imgs/weather-vane/2024-3/2024-3-14-1.jpg" width="500"   />
+
+2. 有自己生意的可以利用小红书获客
+
+   比剪视频高效，粉丝精准，虽然数量不一定很多，但是转化效率会高很多
+
+<img src="/imgs/weather-vane/2024-3/2024-3-14-2.jpg" width="500"   />
+
 ## 2024.3.13
 
 1. 之前玩 midjourney 的时候有个最大的问题就是连续性故事很难做到角色的一致，每次生成出来的人物都差很多
