更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,19 @@
+## 2024.3.16
+
+1. 不能把观众当傻子
+
+或者说现在人看多了套路，对立人设的要求更高了
+
+<img src="/imgs/weather-vane/2024-3/2024-3-16-1.jpg" width="500"   />
+
+2. CSDN 算是程序员群体中鄙视链底端
+
+类似用谷歌的瞧不上用百度的
+
+CSDN 广告真的多，不过没想过利用这点来赚钱，果然最大的劣势往往也是最大的优势
+
+<img src="/imgs/weather-vane/2024-3/2024-3-16-2.jpg" width="500"   />
+
 ## 2024.3.14
 
 1. 这个引流方式很暴力，缺点是引流来的没那么垂直，里面肯定有不少来爆粉的
