更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,25 @@
+## 2024.3.22
+
+1. 只知道拉新有的赚，没想过转存也有
+
+   一些做资料引流转化的项目可以顺便网盘拉新一波
+
+<img src="/imgs/weather-vane/2024-3/2024-3-22-1.jpg" width="500"   />
+
+2. 家里人也买了一堆花花草草，对于不太贵的花花草草，挺容易让人下单，家里有点点缀可以提高幸福度，同时容易养着养着就死了，不断会有新的需求
+
+<img src="/imgs/weather-vane/2024-3/2024-3-22-2.jpg" width="500"   />
+
+3. 报了工具站航海，内容型的思路确实牛逼，之前看到很多 ai 绘画的站点都是这么做的
+
+<img src="/imgs/weather-vane/2024-3/2024-3-22-3.jpg" width="500"   />
+
+## 2024.3.21
+
+1. ai 绘画卖壁纸，玄学为细分领域，看了下主要是店铺售卖+群里引流至神图壁纸，可复制性强，可以矩阵放大
+
+<img src="/imgs/weather-vane/2024-3/2024-3-21-1.jpg" width="500"   />
+
 ## 2024.3.16
 
 1. 不能把观众当傻子
