更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,17 @@
+## 2024.3.24
+
+1. 不知道有没有开源代码，最近看到好几个这样的网站了
+
+<img src="/imgs/weather-vane/2024-3/2024-3-24-1.jpg" width="500"   />
+
+2. 不好找工作的另一面就是考研越来越卷，这个赛道也很多人，配合小红书搞流量，做这个行业的可以在次年提前埋伏
+
+<img src="/imgs/weather-vane/2024-3/2024-3-24-2.jpg" width="500"   />
+
+3. 简单暴力的商品展现方式，和之前看到的手机壳类似，小红书 yyds
+
+<img src="/imgs/weather-vane/2024-3/2024-3-24-3.jpg" width="500"   />
+
 ## 2024.3.22
 
 1. 只知道拉新有的赚，没想过转存也有
