更新风向标

--- a/docs/weather-vane/2024-3.md
+++ b/docs/weather-vane/2024-3.md
@@ -1,3 +1,19 @@
+## 2024.3.27
+
+1. 利用反差感来吸引流量，风险有点大，脑洞也大
+
+<img src="/imgs/weather-vane/2024-3/2024-3-27-1.jpg" width="500"   />
+
+2. 这个在别的例子里看到过，真实场景更容易让人相信，车间、农场、果园等等，都可以按照这种方式来提高信任度
+
+<img src="/imgs/weather-vane/2024-3/2024-3-27-2.jpg" width="500"   />
+
+3. 有国人在海外，一定就有老外在国内
+
+   占领生态位的反面，或者说不同领域，一下子就感觉变成了蓝海
+
+<img src="/imgs/weather-vane/2024-3/2024-3-27-3.jpg" width="500"   />
+
 ## 2024.3.24
 
 1. 不知道有没有开源代码，最近看到好几个这样的网站了
