更新风向标

--- a/docs/weather-vane/2024-4.md
+++ b/docs/weather-vane/2024-4.md
@@ -1,3 +1,27 @@
+## 2024.4.4
+
+1. 小红书转私域的方法和话术可以学一下
+
+   之前做小红书的时候对这方面也是头疼，毕竟算是偷偷摸摸、对抗平台
+
+<img src="/imgs/weather-vane/2024-4/2024-4-4-1.jpg" width="500"   />
+
+2. 玄学，最近看到很多这方面的
+
+   无论是带货，还是卖课程，擦边一下玄学可能有意想不到的效果
+
+   九紫离火也是前段时间第一次知道的
+
+<img src="/imgs/weather-vane/2024-4/2024-4-4-2.jpg" width="500"   />
+
+3. 这个绝了，就是不知道有没有被封的风险
+
+   之后的五一端午等假期都可以来一遍
+
+   「关于 XXX 假期不补班的通知」
+
+<img src="/imgs/weather-vane/2024-4/2024-4-4-3.jpg" width="500"   />
+
 ## 2024.4.3
 
 1. 在内卷的环境下，学门手艺，走蓝领赛道，也许是突围的一种好办法
