更新风向标

--- a/docs/weather-vane/2024-4.md
+++ b/docs/weather-vane/2024-4.md
@@ -1,3 +1,17 @@
+## 2024.4.7
+
+1. 奥运会带来的机会，但是普通人应该是抓不住的，如果搞不好也许还会亏本，不同行业沉淀积累才有冒头的可能
+
+<img src="/imgs/weather-vane/2024-4/2024-4-7-1.jpg" width="500"   />
+
+2. boss 引流，未曾想过的方法，长见识了
+
+   不只是小说推文，别的能分佣的应该都能做
+
+   就是不知道 boss 的风控怎么样，已经注册要求高不高
+
+<img src="/imgs/weather-vane/2024-4/2024-4-7-2.jpg" width="500"   />
+
 ## 2024.4.4
 
 1. 小红书转私域的方法和话术可以学一下
