更新风向标

--- a/docs/weather-vane/2024-4.md
+++ b/docs/weather-vane/2024-4.md
@@ -1,3 +1,17 @@
+## 2024.4.8
+
+1. 也算是玄学范畴
+
+   我怎么就做不起来呢
+
+<img src="/imgs/weather-vane/2024-4/2024-4-8-1.jpg" width="500"   />
+
+2. 通过真实照片来提高用户信任度的例子
+
+   当然，是不是真的真实也不好说，如果都这么玩的话大概率会被玩坏
+
+<img src="/imgs/weather-vane/2024-4/2024-4-8-2.jpg" width="500"   />
+
 ## 2024.4.7
 
 1. 奥运会带来的机会，但是普通人应该是抓不住的，如果搞不好也许还会亏本，不同行业沉淀积累才有冒头的可能
