更新风向标

--- a/docs/weather-vane/2024-4.md
+++ b/docs/weather-vane/2024-4.md
@@ -1,5 +1,25 @@
 # 2024 年 4 月风向标共读
 
+## 2024.4.14
+
+1. 小众角度，还挺新颖的
+
+<img src="/imgs/weather-vane/2024-4/2024-4-14-1.jpg" width="500"   />
+
+2. 做出海的绕不过的需求
+
+   包括航海的时候，如果需要开通支付的话，也是需要注册海外公司，挺麻烦
+
+<img src="/imgs/weather-vane/2024-4/2024-4-14-2.jpg" width="500"   />
+
+3. 内容相当垂直的一种方式
+
+   不过坚持半年，每天 10 个产品，每个 1000 字也太难了点
+
+   变现的话，我能想到的就是公众号流量主，小红书接广告推广，不确定会不会有人投放，也许是我眼界小了
+
+<img src="/imgs/weather-vane/2024-4/2024-4-14-3.jpg" width="500"   />
+
 ## 2024.4.8
 
 1. 也算是玄学范畴
