更新风向标

--- a/docs/weather-vane/2024-4.md
+++ b/docs/weather-vane/2024-4.md
@@ -1,5 +1,21 @@
 # 2024 年 4 月风向标共读
 
+## 2024.4.15
+
+1. 这两天对本地生活有了新认识
+
+   起源是我很久以前找工作，在 boss 上搜老家的岗位，全部加起来也就四五个，其中大部分还是几个月前发布的那种
+
+   后来从朋友那得知，当地的人社公众号上会发布招聘岗位，更新频率也挺高，我去搜了搜，还真是
+
+   就是公众号上搜索不太合适，有一个小程序的，但是岗位更新不太勤
+
+   如果是市场化的话，肯定能做的更好（也可能是盈利困难所以没人做）
+
+   不只是招聘，别的本地生活需求都可以关注关注
+
+<img src="/imgs/weather-vane/2024-4/2024-4-15-1.jpg" width="500"   />
+
 ## 2024.4.14
 
 1. 小众角度，还挺新颖的
